sivut kiinteän kokoiseksi, blurri-bugi poistettu, baarien nollauksen jälkeinen bugi poistettu

--- a/static/tyylit/baarikierros.css
+++ b/static/tyylit/baarikierros.css
@@ -1,7 +1,14 @@
 #baarikierros {
-  margin-top: 2em;
+  margin: 0;
   min-height: 100vh;
   background-color: #ffebb7;
+  max-width: 100%;
+  max-height: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 #baarikierroslista {
@@ -25,24 +32,40 @@ Oikeaan reunaan alas päällekkäin.
 
 /*baarikierrosnappien kokoa ja väriä*/
 #baarikierrosnapit button {
-  background-color: #243763;
-  border-radius: 100%;
+  /* background-color: #243763; */
+  background-color: rgb(255, 235, 183, 0.7);
+
+  /* background: transparent;
+   */
+  /*  border: none !important;
+ */
+  border-radius: 25%;
   min-width: 75px;
   max-width: 75px;
   min-height: 75px;
   max-height: 75px;
-  padding:0;
+  padding: 0;
+}
+
+#poista_baarit svg {
+  width: 2em;
+  height: 2em;
+  fill: #ff6e31;
+}
+
+#lisaa_baari svg {
+  fill: #243763;
+  width: 3em;
+  height: 3em;
 }
 
 /*baarikierrosnappien ikonit*/
 #baarikierrosnapit button svg {
   display: inline-block;
   vertical-align: middle;
-  width:2em;
-  height:2em;
 }
 
 #toiminnallisuus {
-  margin-top: 5%;
-  margin-bottom: 5%;
+  overflow-y: scroll;
+  flex-grow: 4;
 }
