--- a/static/tyylit/tyylit.css
+++ b/static/tyylit/tyylit.css
@@ -71,6 +71,12 @@ ul {
 
 html,
 body {
+  overflow: hidden;
+  border: 0;
+  margin: 0;
+  max-width: 100%;
+  max-height: 100%;
+  height: 100%;
   margin: 0;
   background-color: #ffebb7;
   text-align: center;
@@ -79,8 +85,8 @@ body {
 html {
   scrollbar-width: none; /* Firefox scrollbar piiloon */
 }
-/* Globaali fontti ja isona ainakin toistaiseksi*/
 
+/* Globaali fontti ja isona*/
 body {
   font-family: "roboto_monoregular";
   font-size: large;
@@ -119,10 +125,7 @@ body {
 
 #alapalkin_painikkeet button svg {
   width: 2em;
-}
-
-.alabar_button:hover {
-  cursor: pointer;
+  height: 2em;
 }
 
 /* Alabarin valittuna oleva button */
@@ -132,4 +135,11 @@ body {
 
 h1 {
   font-family: "windsorbold";
+}
+
+button {
+  touch-action: manipulation;
+}
+button:hover {
+  cursor: pointer;
 }
